<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">PhoneForFilm</string>
    <string name="accept">Accept</string>
    <string name="add_contact">Contact toevoegen</string>
    <string name="answer">Opnemen</string>
    <string name="change_language">Taal wijzigen</string>
    <string name="change_sender">Afzender wijzigen</string>
    <string name="change_status">Status wijzigen</string>
    <string name="change_theme">Thema wijzigen</string>
    <string name="change_time">Tijd wijzigen</string>
    <string name="chat_image_desc">Chatpictogram</string>
    <string name="chat_met_acteur_a">Chat met acteur A</string>
    <string name="choose_theme">Thema kiezen</string>
    <string name="contact_name">Contact</string>
    <string name="contact_photo">Contactfoto</string>
    <string name="conversation_label">Contact</string>
    <string name="copied_to_clipboard">Gekopieerd naar klembord</string>
    <string name="copy_message">Kopieer bericht</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="decline_button">Weigeren</string>
    <string name="delete">Verwijderen</string>
    <string name="delete_message">Bericht verwijderen</string>
    <string name="desc_add_chat">Nieuw gesprek</string>
    <string name="dutch">Nederlands</string>
    <string name="edit">Bewerken</string>
    <string name="edit_message">Bericht bewerken</string>
    <string name="end_call">Oproep beëindigen</string>
    <string name="hello">HALLO</string>
    <string name="hint_message">Typ een bericht</string>
    <string name="icon_delete">🗑</string>
    <string name="icon_edit">✎</string>
    <string name="incoming_call">Inkomend gesprek</string>
    <string name="language">Taal</string>
    <string name="language_dutch">Nederlands</string>
    <string name="language_english">English</string>
    <string name="language_french">Français</string>
    <string name="language_german">Deutsch</string>
    <string name="language_spanish">Español</string>
    <string name="last_message_label">Laatste bericht</string>
    <string name="menu_status_delivered">Afgeleverd</string>
    <string name="menu_status_read">Gelezen</string>
    <string name="menu_status_sent">Verzonden</string>
    <string name="menu_time_5min_ago">5 minuten geleden</string>
    <string name="menu_time_custom">Aangepast…</string>
    <string name="menu_time_now">Nu</string>
    <string name="message_deleted">Bericht verwijderd</string>
    <string name="message_options">Berichtopties</string>
    <string name="more">Meer</string>
    <string name="name">Naam</string>
    <string name="new_contact">Nieuw contact</string>
    <string name="phone">Telefoon</string>
    <string name="phone_number">Telefoonnummer</string>
    <string name="placeholder_empty">Nothing here yet</string>
    <string name="profile_picture">Profielfoto</string>
    <string name="reject">Weigeren</string>
    <string name="sample_time">15:00</string>
    <string name="save">Opslaan</string>
    <string name="save_contact">Contact opslaan</string>
    <string name="search">Zoeken</string>
    <string name="send">Verstuur bericht</string>
    <string name="start_call">Oproep starten</string>
    <string name="start_chat">Chat starten</string>
    <string name="theme_blue_stage">Blue Stage</string>
    <string name="theme_darkroom">Darkroom</string>
    <string name="theme_greenroom">Greenroom</string>
    <string name="theme_grey_card">Grey Card</string>
    <string name="theme_neutral_light">Neutral Light</string>
    <string name="title_chat_list">Chatlist</string>
    <string name="title_language_selection">Language selection</string>
    <string name="title_theme_settings">Theme settings</string>
    <string name="toggle_direction">Toggle direction</string>
    <string name="toggle_sender">Toggle sender</string>
    <string name="type_message">Typ je bericht</string>
    <string name="hint_type_message">Type a message...</string>
    <string name="title_chat_with">Chat with %1$s</string>
    <string name="title_chats">Chats</string>
    <string name="add_chat">Add chat</string>
    <string name="avatar_desc">Contact avatar</string>
    <string name="decline">Decline</string>
    <string name="select_theme">Select theme</string>
    <string name="select_locale">Select Locale</string>

    <string name="action_theme">Theme</string>
</resources>