<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton android:id="@+id/radioEn" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/language_english"/>

        <RadioButton android:id="@+id/radioNl" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/language_dutch"/>

        <RadioButton android:id="@+id/radioDe" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/language_german"/>

        <RadioButton android:id="@+id/radioFr" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/language_french"/>

        <RadioButton android:id="@+id/radioEs" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/language_spanish"/>
    </RadioGroup>
</LinearLayout>
