<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_change_time"
        android:title="@string/change_time"
        android:icon="@drawable/menu_change_time"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_change_status"
        android:title="@string/change_status"
        android:icon="@drawable/menu_change_status"
        app:showAsAction="always" />


    <item
        android:id="@+id/menu_edit"
        android:title="@string/edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_pin"
        android:title="@string/pin_unpin"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>

