<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_chat"
        android:layout_marginBottom="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_call"
        android:layout_marginBottom="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:layout_marginBottom="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_theme_settings"/>
</LinearLayout>
